--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+ .sidebar{
+  height: 100vh;
+  background-color: #f8f9fa;
+ }
+
+ .sidebar li{
+
+  padding: 10px 5px;
+  text-align: center;
+ }
+
+ .sidebar li a{
+  text-decoration: none;
+ }
+
+
+
